# ZOSsemestralka

./: CMakeLists.txt  FAT.c  FAT.h  commands.c  commands.h  constants.h  main.c  memoryDisk.c  memoryDisk.h  pathManager.c  pathManager.h  runningOfProgram.c  runningOfProgram.h
